--- a/Crave App/Base.lproj/Main.storyboard
+++ b/Crave App/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="65" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Ltv-t6-AAv">
-                                <rect key="frame" x="0.0" y="235.5" width="600" height="315.5"/>
+                                <rect key="frame" x="0.0" y="235" width="600" height="315.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="sectionIndexBackgroundColor" red="1" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
@@ -29,7 +29,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Meal Suggestion Here" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Of5-HP-0a3">
-                                                    <rect key="frame" x="53" y="22" width="170" height="21"/>
+                                                    <rect key="frame" x="52" y="22" width="170" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -42,8 +42,39 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NvK-QJ-Mt3" userLabel="Top View">
                                 <rect key="frame" x="0.0" y="10" width="600" height="225.5"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Already at a restaurant and can't decide what to get? Let us help you out." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KIT-XI-jf0">
-                                        <rect key="frame" x="138" y="28" width="345" height="72"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FCj-Ag-5Xl">
+                                        <rect key="frame" x="238" y="94" width="143" height="20"/>
+                                        <attributedString key="attributedText">
+                                            <fragment content="Enter your location">
+                                                <attributes>
+                                                    <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <font key="NSFont" size="17" name="HelveticaNeue"/>
+                                                    <paragraphStyle key="NSParagraphStyle" alignment="right" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
+                                                </attributes>
+                                            </fragment>
+                                        </attributedString>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="We think you'll like..." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b83-70-jWs">
+                                        <rect key="frame" x="222" y="187" width="156.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="l2j-4C-yNg" customClass="AutoCompleteTextField" customModule="Crave_App" customModuleProvider="target">
+                                        <rect key="frame" x="200" y="122" width="200" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZU2-5N-vuE">
+                                        <rect key="frame" x="275" y="155" width="50" height="24"/>
+                                        <state key="normal" title="Go!">
+                                            <color key="titleColor" red="0.2476996287601215" green="0.49783875944250888" blue="0.88397648358585856" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Already at a restaurant and can't decide what to get? Let us help you out." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KIT-XI-jf0">
+                                        <rect key="frame" x="137" y="28" width="345" height="72"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="345" id="13g-tR-pwb"/>
                                             <constraint firstAttribute="height" constant="72" id="SoR-Ar-ci4"/>
@@ -51,45 +82,24 @@
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Ev-Se-xzi">
-                                        <rect key="frame" x="203" y="155" width="194" height="24"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                                        <state key="normal" title="Incorrect? Tap here to enter your location">
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                    </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="We think you're at:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FCj-Ag-5Xl">
-                                        <rect key="frame" x="239" y="94" width="142.5" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="We think you'll like..." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b83-70-jWs">
-                                        <rect key="frame" x="222.5" y="187" width="156.5" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="That one place by the beach in san diego" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IiH-cC-AP6">
-                                        <rect key="frame" x="152.5" y="126.5" width="316.5" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="b83-70-jWs" firstAttribute="top" secondItem="8Ev-Se-xzi" secondAttribute="bottom" constant="8" id="0TP-JD-tV3"/>
                                     <constraint firstAttribute="centerX" secondItem="b83-70-jWs" secondAttribute="centerX" constant="-0.5" id="3dc-g4-bHg"/>
+                                    <constraint firstItem="ZU2-5N-vuE" firstAttribute="leading" secondItem="NvK-QJ-Mt3" secondAttribute="leading" constant="275" id="8oo-Hd-Exs"/>
                                     <constraint firstAttribute="centerX" secondItem="FCj-Ag-5Xl" secondAttribute="centerX" constant="-10" id="9Tn-HE-T19"/>
-                                    <constraint firstAttribute="centerX" secondItem="8Ev-Se-xzi" secondAttribute="centerX" id="L2T-Qa-fe6"/>
+                                    <constraint firstAttribute="trailing" secondItem="ZU2-5N-vuE" secondAttribute="trailing" constant="275" id="AB9-L8-lhM"/>
+                                    <constraint firstItem="l2j-4C-yNg" firstAttribute="centerX" secondItem="FCj-Ag-5Xl" secondAttribute="centerX" constant="-9.5" id="BAr-qh-9Gx"/>
+                                    <constraint firstAttribute="trailing" secondItem="l2j-4C-yNg" secondAttribute="trailing" constant="200" id="DW7-S4-qWa"/>
+                                    <constraint firstItem="ZU2-5N-vuE" firstAttribute="top" secondItem="l2j-4C-yNg" secondAttribute="bottom" constant="3" id="OKu-YL-LQZ"/>
                                     <constraint firstAttribute="bottom" secondItem="b83-70-jWs" secondAttribute="bottom" constant="18" id="R1n-Dd-V8F"/>
-                                    <constraint firstAttribute="centerX" secondItem="IiH-cC-AP6" secondAttribute="centerX" constant="-10.5" id="Vhp-JQ-gDf"/>
                                     <constraint firstAttribute="centerX" secondItem="KIT-XI-jf0" secondAttribute="centerX" constant="-10.5" id="YIS-9i-j0C"/>
                                     <constraint firstItem="FCj-Ag-5Xl" firstAttribute="top" secondItem="KIT-XI-jf0" secondAttribute="bottom" constant="-6" id="ZkY-Y6-sCH"/>
-                                    <constraint firstItem="IiH-cC-AP6" firstAttribute="top" secondItem="FCj-Ag-5Xl" secondAttribute="bottom" constant="12" id="cMY-Qx-g1k"/>
+                                    <constraint firstItem="b83-70-jWs" firstAttribute="top" secondItem="ZU2-5N-vuE" secondAttribute="bottom" constant="8" id="a0c-wa-ee4"/>
                                     <constraint firstItem="KIT-XI-jf0" firstAttribute="top" secondItem="NvK-QJ-Mt3" secondAttribute="top" constant="28" id="f2h-ab-pS1"/>
-                                    <constraint firstItem="8Ev-Se-xzi" firstAttribute="top" secondItem="IiH-cC-AP6" secondAttribute="bottom" constant="8" id="ghy-0U-rMP"/>
+                                    <constraint firstItem="l2j-4C-yNg" firstAttribute="leading" secondItem="NvK-QJ-Mt3" secondAttribute="leading" constant="200" id="kAp-l3-Kw4"/>
+                                    <constraint firstItem="b83-70-jWs" firstAttribute="top" secondItem="l2j-4C-yNg" secondAttribute="bottom" constant="35" id="wDf-vH-nCk"/>
+                                    <constraint firstItem="l2j-4C-yNg" firstAttribute="top" secondItem="FCj-Ag-5Xl" secondAttribute="bottom" constant="8" id="znu-bF-VD3"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -106,12 +116,12 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Chooser" image="Choose" id="eX0-Zq-2WM"/>
                     <connections>
-                        <outlet property="headerLabel" destination="KIT-XI-jf0" id="MVF-Lo-dul"/>
-                        <outlet property="incorrectButton" destination="8Ev-Se-xzi" id="61L-vs-uJv"/>
-                        <outlet property="locationLabel" destination="IiH-cC-AP6" id="xxd-G0-ZBi"/>
-                        <outlet property="setupLabel" destination="FCj-Ag-5Xl" id="bRs-pq-7Ac"/>
-                        <outlet property="suggestionLabel" destination="b83-70-jWs" id="5Er-l7-BS5"/>
-                        <outlet property="tableView" destination="Ltv-t6-AAv" id="iXH-HA-9bb"/>
+                        <outlet property="goButton" destination="ZU2-5N-vuE" id="Ry7-lr-DVS"/>
+                        <outlet property="headerLabel" destination="KIT-XI-jf0" id="GQS-si-bPr"/>
+                        <outlet property="locationLabel" destination="FCj-Ag-5Xl" id="ld0-fh-csf"/>
+                        <outlet property="suggestionLabel" destination="b83-70-jWs" id="8L8-Z8-3Jy"/>
+                        <outlet property="tableView" destination="Ltv-t6-AAv" id="gKr-i0-hCd"/>
+                        <outlet property="textField" destination="l2j-4C-yNg" id="n7D-XL-STG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xfK-40-HjZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
