--- a/Crave App/Base.lproj/Main.storyboard
+++ b/Crave App/Base.lproj/Main.storyboard
@@ -167,7 +167,7 @@
                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No frills. No games. Just mind reading." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OyP-ak-AbI">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your top 5 suggestions" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OyP-ak-AbI">
                                     <rect key="frame" x="13" y="64" width="298" height="21"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="298" id="VPU-VT-ZGZ"/>
@@ -193,14 +193,17 @@
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Nfg-II-fDW" id="gMM-Ar-cec">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Meal Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C2N-Jt-Txf">
-                                            <rect key="frame" x="8" y="8" width="89" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Meal Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C2N-Jt-Txf">
+                                            <rect key="frame" x="8" y="8" width="297" height="21"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Description" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sEa-WR-8uc">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Description" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sEa-WR-8uc">
                                             <rect key="frame" x="8" y="37" width="89" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="89" id="f0F-m2-QQG"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.83921575546264648" green="0.64313727617263794" blue="0.16470588743686676" alpha="1" colorSpace="deviceRGB"/>
                                             <nil key="highlightedColor"/>
@@ -214,10 +217,14 @@
                                     </subviews>
                                     <constraints>
                                         <constraint firstAttribute="bottomMargin" secondItem="z65-t9-ds7" secondAttribute="bottom" constant="61.5" id="8iU-FT-aA7"/>
+                                        <constraint firstItem="C2N-Jt-Txf" firstAttribute="top" secondItem="gMM-Ar-cec" secondAttribute="topMargin" id="BAl-g2-GjC"/>
+                                        <constraint firstItem="C2N-Jt-Txf" firstAttribute="leading" secondItem="gMM-Ar-cec" secondAttribute="leadingMargin" id="Hch-Xe-AJI"/>
+                                        <constraint firstItem="sEa-WR-8uc" firstAttribute="top" secondItem="C2N-Jt-Txf" secondAttribute="bottom" constant="8" id="Hcr-UO-LSv"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="sEa-WR-8uc" secondAttribute="bottom" constant="58.5" id="L9b-oG-pLO"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="z65-t9-ds7" secondAttribute="trailing" constant="17" id="LSk-T5-5EI"/>
                                         <constraint firstItem="z65-t9-ds7" firstAttribute="top" secondItem="gMM-Ar-cec" secondAttribute="topMargin" constant="1" id="Od0-Q0-IB4"/>
-                                        <constraint firstItem="z65-t9-ds7" firstAttribute="centerY" secondItem="C2N-Jt-Txf" secondAttribute="centerY" constant="1" id="jbL-rM-YKH"/>
-                                        <constraint firstItem="z65-t9-ds7" firstAttribute="leading" secondItem="C2N-Jt-Txf" secondAttribute="trailing" constant="423" id="riB-Uw-2E9"/>
+                                        <constraint firstItem="z65-t9-ds7" firstAttribute="leading" secondItem="C2N-Jt-Txf" secondAttribute="trailing" constant="215" id="Qp5-Xl-gVd"/>
+                                        <constraint firstItem="sEa-WR-8uc" firstAttribute="leading" secondItem="C2N-Jt-Txf" secondAttribute="leading" id="nFn-1a-Vo7"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
