--- a/Crave App/Base.lproj/Main.storyboard
+++ b/Crave App/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="QMC-TT-aj4">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -193,38 +194,41 @@
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Nfg-II-fDW" id="gMM-Ar-cec">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Meal Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C2N-Jt-Txf">
-                                            <rect key="frame" x="8" y="8" width="297" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" misplaced="YES" text="Meal Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C2N-Jt-Txf">
+                                            <rect key="frame" x="8" y="8" width="450" height="30"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Description" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sEa-WR-8uc">
-                                            <rect key="frame" x="8" y="37" width="89" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="$0.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z65-t9-ds7">
+                                            <rect key="frame" x="517" y="7" width="75" height="21"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="89" id="f0F-m2-QQG"/>
+                                                <constraint firstAttribute="width" secondItem="z65-t9-ds7" secondAttribute="height" multiplier="25:7" id="EyP-La-5qd"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.14901961386203766" green="0.729411780834198" blue="0.35294118523597717" alpha="1" colorSpace="deviceRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Description" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sEa-WR-8uc">
+                                            <rect key="frame" x="8" y="37" width="450" height="79.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="sEa-WR-8uc" secondAttribute="height" multiplier="450:79" id="K6m-kJ-rPb"/>
+                                                <constraint firstAttribute="height" constant="79.5" id="oc7-Wu-Z6D"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.83921575546264648" green="0.64313727617263794" blue="0.16470588743686676" alpha="1" colorSpace="deviceRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="$0.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z65-t9-ds7">
-                                            <rect key="frame" x="520" y="9" width="55" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" red="0.14901961386203766" green="0.729411780834198" blue="0.35294118523597717" alpha="1" colorSpace="deviceRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="bottomMargin" secondItem="z65-t9-ds7" secondAttribute="bottom" constant="61.5" id="8iU-FT-aA7"/>
-                                        <constraint firstItem="C2N-Jt-Txf" firstAttribute="top" secondItem="gMM-Ar-cec" secondAttribute="topMargin" id="BAl-g2-GjC"/>
-                                        <constraint firstItem="C2N-Jt-Txf" firstAttribute="leading" secondItem="gMM-Ar-cec" secondAttribute="leadingMargin" id="Hch-Xe-AJI"/>
-                                        <constraint firstItem="sEa-WR-8uc" firstAttribute="top" secondItem="C2N-Jt-Txf" secondAttribute="bottom" constant="8" id="Hcr-UO-LSv"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="sEa-WR-8uc" secondAttribute="bottom" constant="58.5" id="L9b-oG-pLO"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="z65-t9-ds7" secondAttribute="trailing" constant="17" id="LSk-T5-5EI"/>
-                                        <constraint firstItem="z65-t9-ds7" firstAttribute="top" secondItem="gMM-Ar-cec" secondAttribute="topMargin" constant="1" id="Od0-Q0-IB4"/>
-                                        <constraint firstItem="z65-t9-ds7" firstAttribute="leading" secondItem="C2N-Jt-Txf" secondAttribute="trailing" constant="215" id="Qp5-Xl-gVd"/>
-                                        <constraint firstItem="sEa-WR-8uc" firstAttribute="leading" secondItem="C2N-Jt-Txf" secondAttribute="leading" id="nFn-1a-Vo7"/>
+                                        <constraint firstItem="sEa-WR-8uc" firstAttribute="leading" secondItem="gMM-Ar-cec" secondAttribute="leadingMargin" id="0Fh-18-q1R"/>
+                                        <constraint firstItem="C2N-Jt-Txf" firstAttribute="leading" secondItem="gMM-Ar-cec" secondAttribute="leadingMargin" id="5jW-OX-Mrq"/>
+                                        <constraint firstItem="sEa-WR-8uc" firstAttribute="bottom" secondItem="gMM-Ar-cec" secondAttribute="bottomMargin" id="6kW-lv-VnB"/>
+                                        <constraint firstItem="C2N-Jt-Txf" firstAttribute="top" secondItem="gMM-Ar-cec" secondAttribute="topMargin" id="Fdd-dq-WSL"/>
+                                        <constraint firstItem="z65-t9-ds7" firstAttribute="leading" secondItem="C2N-Jt-Txf" secondAttribute="trailing" constant="59" id="Ol2-Rr-wHD"/>
+                                        <constraint firstItem="z65-t9-ds7" firstAttribute="trailing" secondItem="gMM-Ar-cec" secondAttribute="trailingMargin" id="kXN-1k-Rli"/>
+                                        <constraint firstItem="sEa-WR-8uc" firstAttribute="top" secondItem="C2N-Jt-Txf" secondAttribute="bottom" constant="-1" id="ldd-4h-URW"/>
+                                        <constraint firstItem="z65-t9-ds7" firstAttribute="centerY" secondItem="C2N-Jt-Txf" secondAttribute="centerY" constant="-5.5" id="mJ3-Pk-uPv"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
